--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,11 +7,11 @@
 }
 
 window#waybar {
-  background-color: transparent;
   border-top: 3px solid transparent;
   color: #fff;
   transition-property: background-color;
   transition-duration: 0.5s;
+  background-color: transparent;
 }
 
 #window {
@@ -49,7 +49,6 @@ button:hover {
 
 #workspaces button {
   padding: 0 5px;
-  background-color: transparent;
   color: #fff;
 }
 
@@ -83,9 +82,17 @@ button:hover {
 #mode,
 #idle_inhibitor,
 #scratchpad,
-#mpd {
+#mpd,
+#custom-wireguard,
+#custom-github,
+#custom-dunst {
   padding: 0 10px;
   font-weight: bold;
+  background-color: transparent;
+}
+
+#custom-pipewire.muted {
+  color: #5b5b5b;
 }
 
 #window,
@@ -182,8 +189,4 @@ button:hover {
 
 #scratchpad {
   background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-  background-color: transparent;
 }
