fix(ghostty): terminal style

--- a/config/eww/eww.scss
+++ b/config/eww/eww.scss
@@ -17,7 +17,7 @@ $bg: rgba(25, 23, 37, 0.7);
 
 * {
   all: unset;
-  font-family: "JetBrainsMono NF";
+  font-family: "JetBrainsMono Nerd Font";
   font-size: 20;
 }
 
